--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@types/proxy-addr": "^2.0.0",
     "@types/source-map-support": "^0.5.6",
     "adonis-preset-ts": "^2.1.0",
-    "eslint": "^8.42.0",
     "eslint-plugin-adonis": "^2.1.1",
     "pino-pretty": "^10.0.0",
     "typescript": "~4.6",
@@ -37,6 +36,7 @@
     "youch-terminal": "^2.2.0"
   },
   "dependencies": {
+    "@adonisjs/ally": "^4.1.5",
     "@adonisjs/core": "^5.9.0",
     "@adonisjs/repl": "^3.1.11",
     "@adonisjs/session": "^6.4.0",
