instala splitwise module

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@adonisjs/view": "^6.2.0",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "splitwise": "^1.0.0"
   }
 }
