--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@adonisjs/assembler": "^5.9.5",
     "@babel/core": "^7.22.1",
     "@babel/preset-env": "^7.22.4",
+    "@inertiajs/server": "^0.1.0",
     "@japa/preset-adonis": "^1.2.0",
     "@japa/runner": "^2.5.1",
     "@symfony/webpack-encore": "^4.1.1",
     "@types/proxy-addr": "^2.0.0",
     "@types/source-map-support": "^0.5.6",
+    "@vue/server-renderer": "^3.3.4",
     "adonis-preset-ts": "^2.1.0",
     "pino-pretty": "^10.0.0",
     "typescript": "~4.6",
@@ -36,7 +38,6 @@
     "@adonisjs/view": "^6.2.0",
     "@eidellev/inertia-adonisjs": "^8.0.1",
     "@inertiajs/vue3": "^1.0.7",
-    "@vue/server-renderer": "^3.3.4",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21",
