--- a/.adonisrc.json
+++ b/.adonisrc.json
@@ -29,7 +29,8 @@
     "@adonisjs/session",
     "@adonisjs/view",
     "@adonisjs/shield",
-    "@eidellev/inertia-adonisjs"
+    "@eidellev/inertia-adonisjs",
+    "./providers/SplitwiseProvider"
   ],
   "metaFiles": [
     {
