--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@eidellev/inertia-adonisjs": "^8.0.1",
     "@inertiajs/vue3": "^1.0.7",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21",
