--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "@inertiajs/vue3": "^1.0.7",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "chart.js": "^4.3.0",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21",
     "vue": "^3.3.4",
+    "vue-chartjs": "^5.2.0",
     "webpack-node-externals": "^3.0.0"
   }
 }
