corrige erro de sintaxe

--- a/.adonisrc.json
+++ b/.adonisrc.json
@@ -31,7 +31,7 @@
     "@adonisjs/view",
     "@adonisjs/shield",
     "@eidellev/inertia-adonisjs",
-    "@adonisjs/lucid",
+    "@adonisjs/lucid"
   ],
   "metaFiles": [
     {
